@@ -2,6 +2,6 @@ AC_INIT(movemail.c)
 CONFIG_RULES
 AC_PROG_INSTALL
 CHECK_FCNTL
-AC_HAVE_HEADERS(unistd.h)
+AC_HAVE_HEADERS(stdlib.h string.h unistd.h)
 V5_USE_SHARED_LIB
 V5_AC_OUTPUT_MAKEFILE
